更改日志

2011-10-23
  修正BUG:  -dt 参数修改无效
           --save-interval  不能设成与 -dt 相等

2011-10-03
发现 2011-09-06 的修改的 Bug: GUI 时参数的即时改变无效.
tempneu2 也改成一次生成的了.

2011-09-07
  解决 firing rate 超过 500次/s 的 Bug.
现在只剩下 spike_list 和 tempneu2 是动态生成的了.

2011-09-06
增加功能:
  可以用微秒极的系统时间作为随机种子(--seed-on), 并且这成为默认选项. (--verbose 时会显示其值)
  手动设置随机种子时, 允许用 0~2^31-1 的整数 或 0~1 之间的浮点数.
  可以通过文件读取每个神经的poisson输入率(相对值).
  可以从命令行直接读取相对poisson输入率和输入相度, 并且允许不完整指定. (--pr-mul, --ps-mul, --psi-mul)
优化:
  tempneu 变量预分配内存.

2011-09-05
对所有动态内存分配失败进行检测.
Xstream 系列 C++ 头文件限制在 datainput.cpp 和 myopengl.cpp 中使用.

2011-09-04
增加功能:
  命令行设置随机数种子.
  可以通过文件读取每个神经的poisson输入强度(相对值)(命令行参数给文件路径).

2011-08-10
修正保存数据的一个 bug: 现在可随意设定保存数据间隔.
增加 RC 滤波选项.

2011-07-11
修正命令行参数解析的一个 bug, 但未完全修正, 请完全按照指定格式使用.
添加对一些编译器的识别宏.
对程序在不同平台的运行效率进行了一个较完整的测试.

2011-05-29
基本把 poisson_input.cpp 的每个细节都弄清楚了.
去除了一些没用到的变量(数组).
把存放 Poisson input 的数组改成程序开头分配.
strobeupdate 改成只更新要用到的部分
一些代码改成更适于打印的形式
速度有约 10% 的提升

2011-05-20
添加参数 --save-spike-interval FILE

2011-05-11
添加参数 --save-spike FILE, --bin-save, --quiet

2011-05-06
总测试:
内存泄漏.
计算正确性.
异常的性能下降.

特例测试(时长=10000, 完全图)
编号  神经元数   输入强度  输入频率
1    1 + 0     弱        弱
2    1 + 0     弱        高
3    1 + 0     强        低
4    1 + 0     强        高

5    2 + 0     弱        弱
6    2 + 0     弱        高
7    2 + 0     强        低
8    2 + 0     强        高

9    20 + 0    中        中

1000 + 0  中        中    连接强度 中高


2011-05-05
在添加了一些命令行功能, 接口基本完整了. 取消原来想设的二进制格式输出.
把打开/关闭文件操作放在了开头/末尾, 效率问题大大改善.

2011-05-04
添加程序命令行参数功能(14 个, 部分未完成)
神经元个数已可参数输入

存在的问题
程序有过于频繁的内存申请, 释放. 导致效率显著下降.
把 tempneu, tmp_tempneu 的内存申请/分配提到开头和结尾,
速度提高约 21% (Linux, 29.2s -> 24.1s) 和 28% (WinXP, 78.6s -> 61.4s)
仍有一些变量有巨量的申请/释放.

2011-05-02, xyy
更改函数 void voltage_dt(..), 用宏区分是否使用 poisson 输入(明显提高计算速度).
去除 RYangle, RXangle 等变量
glColor3f(rcolor,gcolor,bcolor);
移出  glBegin(GL_QUADS);
删除函数
	glpolygon(..)  // 画多边形
	glring(..)  // 画环
	glarrow(..)  // 画箭头

变量名更改
GLUTWINDOWNUMBER  GLUT_WINDOW_ID
glut 回调函数的参数引用传递改为直接传递
按 Esc 的退出码改为 0 (原是 1)