@@ -1,8 +1,17 @@
 更改日志
 
+TODO: 完整的测试
+
+2011-10-28
+  添加功能别名: -stv VALUE (同--save-interval VALUE)
+
+2011-10-24
+  添加功能: 自定义 RC 低通滤波的系数: --RC-filter ci co
+
 2011-10-23
   修正BUG:  -dt 参数修改无效
            --save-interval  不能设成与 -dt 相等
+  更改:  放电时刻文件 ras.txt 的神经元编号改为从 1 开始.
 
 2011-10-03
 发现 2011-09-06 的修改的 Bug: GUI 时参数的即时改变无效.
